--- a/resources/fxml/Info_label.fxml
+++ b/resources/fxml/Info_label.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.text.Font?>
 
-<Label fx:id="infoLabel" alignment="CENTER" prefHeight="400.0" prefWidth="830.0" text="В расчет можно добавить фоновую арматуру (Вкладка &quot;Ручной ввод&quot;, пункт 1)&#10;&#10;Пример для шапки таблицы:&#10;Спецификация арматуры на перекрытие на отм. +18,200 (лист 4)&#10;&#10;Внимание!&#10;Имя файла не должно содержать следующих символов:&#10;\  /  :  *  ?  &quot;  &lt;  &gt;  |&#10;(Данные символы будут автоматически удалены)&#10;" textAlignment="CENTER" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Label fx:id="infoLabel" alignment="CENTER" prefHeight="480.0" prefWidth="830.0" textAlignment="CENTER" wrapText="true" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <font>
       <Font name="System Bold" size="20.0" />
    </font>
